# bmstu-cg-cp

./: .gitignore  readme.md
cg_course/: .~lock.AVDEYKINA_TZ.doc#  AVDEYKINA_TZ.doc  ~$RD0002.tmp
cg_course/prac/: title.doc  title.docx
cg_course/кзя/: tital.doc
maindir/cg-cp/my_mirror/: CMakeLists.txt  main_release.cpp  main_test.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
maindir/cg-cp/my_mirror/builder/: basebuilder.h  basebuillder.cpp
maindir/cg-cp/my_mirror/builder/cone/: cone.cpp
maindir/cg-cp/my_mirror/builder/mirror/: mirror.cpp  mirror.h
maindir/cg-cp/my_mirror/builder/mirror/convex/: mirrorconvex.cpp
maindir/cg-cp/my_mirror/builder/mirror/plane/: mirrorplane.h
maindir/cg-cp/my_mirror/builder/prysm/tetra/: prysmtetra.h
maindir/cg-cp/my_mirror/builder/prysm/tri/: prysmtri.cpp  prysmtri.h
maindir/cg-cp/my_mirror/builder/pyramide/penta/: pyramidepenta.cpp  pyramidepenta.h
maindir/cg-cp/my_mirror/builder/pyramide/tri/: pyramidetri.cpp
maindir/cg-cp/my_mirror/builder/sphere/: sphere.cpp  sphere.h
maindir/cg-cp/my_mirror/command/: basecommand.h  scenecommand.h
maindir/cg-cp/my_mirror/data/: mirrorconcave.stl
maindir/cg-cp/my_mirror/data/stl/: mirrorconcave.stl  pyramidetetra.stl  sphere.stl
maindir/cg-cp/my_mirror/drawer/: basedrawer.h  qtdrawer.h
maindir/cg-cp/my_mirror/facade/: facade.cpp  facade.h
maindir/cg-cp/my_mirror/loaddialog/: loaddialog.cpp  loaddialog.h
maindir/cg-cp/my_mirror/object/: object.h
maindir/cg-cp/my_mirror/object/invisibleobject/: invisibleobject.h
maindir/cg-cp/my_mirror/object/invisibleobject/camera/: camera.cpp  camera.h
maindir/cg-cp/my_mirror/object/invisibleobject/kdtree/: kdtree.cpp  kdtree.h
maindir/cg-cp/my_mirror/object/invisibleobject/light/: light.h
maindir/cg-cp/my_mirror/object/visibleobject/: visibleobject.h
maindir/cg-cp/my_mirror/object/visibleobject/model/: model.cpp  model.h
maindir/cg-cp/my_mirror/object/visibleobject/triangle/: triangle.cpp  triangle.h
maindir/cg-cp/my_mirror/scene/: scene.cpp  scene.h
maindir/cg-cp/my_mirror/scenemanager/: scenemanager.cpp  scenemanager.h
maindir/cg-cp/my_mirror/stl_reader/: stl_reader.h
maindir/cg-cp/my_mirror/utility/bbox/: bbox.cpp  bbox.h
maindir/cg-cp/my_mirror/utility/exception/: baseexception.h
maindir/cg-cp/my_mirror/utility/material/: material.h
maindir/cg-cp/my_mirror/utility/ray/: ray.cpp
maindir/idef/: model.rsf
maindir/qtproject/cg-cp/: CMakeLists.txt  mainwindow.ui
maindir/qtproject/cg-cp/builder/: basebuilder.h
maindir/qtproject/cg-cp/object/: object.h
maindir/qtproject/cg-cp/utility/material/: material.cpp  material.h
maindir/report/: 00-abstract.tex  01-intro.tex  10-analysis.tex  20-design.tex  30-implementation.tex  40-verification.tex  50-appendix.tex  biblio.bib  preamble.tex  report.tex  title.tex
maindir/report/idef/: model.rsf
maindir/report/idef/main_task/: model.rsf
maindir/report/inc/: algorithm_raytracing.graphml  algorithm_trace.graphml  gen.py
maindir/report/inc/img/: Makefile  algorithm_bbox_intersect.graphml  algorithm_kdtree_intersect.graphml  algorithm_tri_intersect.graphml
maindir/report/inc/img/graphml/: algorithm_cyl_intersect.graphml  algorithm_cyl_intersect_1.graphml  algorithm_kdtree_intersect.graphml  algorithm_raytracing.graphml  algorithm_sphere_intersect.graphml  uml_classes.graphml  uml_classes_1.graphml  uml_classes_2.graphml
my-mirror/report/: 02-conclusion.tex  10-analysis.tex  20-design.tex  biblio.bib
my-mirror/report/inc/img/graphml/: algorithm_bbox_intersect.graphml  algorithm_cyl_intersect.graphml  algorithm_sphere_intersect.graphml  algorithm_trace.graphml  algorithm_tri_intersect.graphml  uml_classes.graphml  uml_classes_1.graphml  uml_classes_2.graphml
my-mirror/src/my_mirror/: main_test.cpp  mainwindow.h
my-mirror/src/my_mirror/builder/: basebuilder.h  basebuillder.cpp
my-mirror/src/my_mirror/builder/cone/: cone.h
my-mirror/src/my_mirror/builder/cylinder/: cylinder.cpp  cylinder.h
my-mirror/src/my_mirror/builder/mirror/: mirror.cpp  mirror.h
my-mirror/src/my_mirror/builder/mirror/concave/: mirrorconcave.cpp  mirrorconcave.h
my-mirror/src/my_mirror/builder/mirror/convex/: mirrorconvex.h
my-mirror/src/my_mirror/builder/mirror/plane/: mirrorplane.cpp
my-mirror/src/my_mirror/builder/prysm/penta/: prysmpenta.cpp  prysmpenta.h
my-mirror/src/my_mirror/builder/prysm/tetra/: prysmtetra.cpp
my-mirror/src/my_mirror/builder/pyramide/tetra/: pyramidetetra.cpp  pyramidetetra.h
my-mirror/src/my_mirror/builder/pyramide/tri/: pyramidetri.h
my-mirror/src/my_mirror/data/stl/: prysmpenta.stl  pyramidepenta.stl
my-mirror/src/my_mirror/drawer/: qtdrawer.cpp
my-mirror/src/my_mirror/facade/: facade.cpp  facade.h
my-mirror/src/my_mirror/factory/: abstractfactory.h
my-mirror/src/my_mirror/factory/qtdrawerfactory/: qtdrawerfactory.cpp  qtdrawerfactory.h
my-mirror/src/my_mirror/object/invisibleobject/camera/: camera.h
my-mirror/src/my_mirror/object/invisibleobject/kdtree/: kdtree.cpp  kdtree.h
my-mirror/src/my_mirror/object/invisibleobject/light/: light.cpp  light.h
my-mirror/src/my_mirror/object/visibleobject/model/: model.h
my-mirror/src/my_mirror/scene/: scene.cpp  scene.h
my-mirror/src/my_mirror/scenemanager/: scenemanager.cpp  scenemanager.h
my-mirror/src/my_mirror/utility/bbox/: bbox.cpp
my-mirror/src/my_mirror/utility/material/: material.cpp  material.h
my-mirror/src/my_mirror/utility/ray/: ray.h
test_project/: CREFBE9.tmp  GOST.sty  analysis.tex  conclusion.tex  construct.tex  contents.tex  intro.tex  lib.bib  lib.tex  listings.txt  main.tex  prac.tex  prac_title.tex  settings.tex  task.doc  test.bib  test_project.tcp  tital.docx  titlepage.tex
